overlays/dev/healthcheck-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  template:
    spec:
      containers:
        - name: webapp
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
